@@ -1,6 +1,7 @@
 Changelog
 =========
 
+
 0.1.a2 (2021-01-09)
 -------------------
 
@@ -17,7 +18,8 @@ Changelog
   - Updated Namespace, (in mapping), added setdefaults
   - Added to_hex, camel2snake, snake2camel, timestamp to string_util
   - Added set_labels to mpl_utils
-
+  - Added real_divide, threshold, ang_diff_* to math
+  
 
 0.1a1.dev1 (2019-04-13)
 -----------------------
